[package]
name = "review-program"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "1.4.0"
borsh-derive = "1.4.0"
solana-program = "1.18.8"
thiserror = "1.0.58"

[dev-dependencies]
solana-program-test = "1.18.8"
solana-sdk = "1.18.8"

# without this, the deploy directory will not be created when running cargo-build-bpf
[lib]
crate-type = ["cdylib", "lib"]